foodtruck_manifests/es-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
spec:
  template:
    metadata:
      labels:
        name: es-pod
    spec:
      containers:
        - name: es
          image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
          ports:
            - containerPort: 9200
  replicas: 1
  selector:
    matchLabel:
      name: es-pod
