foodtruck_manifests/es-cip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: es-cip-service
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    name: es-pod
