foodtruck_manifests/web-cip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-cip-service
spec:
  type: CusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    name: web-pod
