foodtruck_manifests/web-np-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-np-service
spec:
  type: NodePort
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    name: web-pod
