foodtruck_manifests/foodtruck-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:         
          - path: /foodtruck
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5000
